--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section>
         <h2>About me</h2>
         <a href="./public/about.html">
-            <img src="../assets/images/standard photo.jpg" alt="Standard Photo" width="200"></a>
+            <img src="/assets/images/standard photo.jpg" alt="Standard Photo" width="200"></a>
     </section>
 
     <section>Hobbies</section>
